# SDS_Prototype

./: CONTRIBUTING.md  README.md  experiment.py  model.py  pyproject.toml
docs/: architecture.md
src/linear_transform/: __init__.py  dataset.py  evaluation.py  model.py
tests/: test_model.py
